[project]
name = "project"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
isort = "^5.13.2"



[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^25.1.0"
mypy = "^1.15.0"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[tool.black]
line-length = 119
exclude = ".git"

[tool.isort]
profile = "black"
line_length = 119

[tool.mypy]
strict = true
disallow_untyped_defs = true
warn_return_any = true
exclude = "venv"

